--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/13680743_877977462336226_8270549817919574545_n.jpg?oh=89794d00bb025417b388ed7c30898f12&oe=58A9D8F6" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
