[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,10 @@
         </div>
         <hr/>
         <div class="center text-big bold">
-            Hi! This is Tharun.
+           <h3>Bio-Data</h3> <br>
+           <h5>Name : </h5> Tharun Patteti <br>
+           <h5>Occupation : </h5> Student <br>
+           
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
