[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,8 @@
         <hr/>
         <div class="center text-big bold">
            <h3>Bio-Data</h3> <br>
-           <h5>Name : </h5> Tharun Patteti <br>
-           <h5>Occupation : </h5> Student <br>
+           <b>Name : </b>Tharun Patteti <br>
+           <b>Occupation : </b> Student <br>
            
         </div>
         <script type="text/javascript" src="/ui/main.js">
