[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/13680743_877977462336226_8270549817919574545_n.jpg?oh=89794d00bb025417b388ed7c30898f12&oe=58A9D8F6" class="img-medium"/>
+            <img src="" class="img-medium"/>
         </div>
         <hr/>
         <div class="center text-big bold">
            <h3>Bio-Data</h3> <br>
-           <b>Name : </b>Tharun Patteti <br>
-           <b>Occupation : </b> Student <br>
+           <b>Name : </b> <br>
+           <b>Occupation : </b>  <br>
            
         </div>
         <script type="text/javascript" src="/ui/main.js">
