--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
                 <li>Gallery</li>
                 <li>Contact</li>
             </ul>
-            <img href="http://scontent-a.cdninstagram.com/hphotos-xpa1/t51.2885-15/925916_533388996767161_1825502711_a.jpg" height="40px"  alt="Profile pic" >
+            <img href="http://scontent-a.cdninstagram.com/hphotos-xpa1/t51.2885-15/925916_533388996767161_1825502711_a.jpg"  alt="Profile pic" >
             
         </div>
        
