[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
                 <li>Contact</li>
             </ul>
         </div>
-         <img href="http://scontent-a.cdninstagram.com/hphotos-xpa1/t51.2885-15/925916_533388996767161_1825502711_a.jpg"  alt="Profile pic" >
+         <img src="http://scontent-a.cdninstagram.com/hphotos-xpa1/t51.2885-15/925916_533388996767161_1825502711_a.jpg"  alt="Profile pic" >
        
         <script type="text/javascript" src="/ui/main.js">
         </script>
