[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,15 @@
         <title>Tharun Patteti</title>
     </head>
     <body>
-        <nav>
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Blog</a>
-            <a href="">Gallery</a>
-            <a href="">Contact</a>
-        </nav>
+        <div>
+            <nav>
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Blog</a>
+                <a href="">Gallery</a>
+                <a href="">Contact</a>
+            </nav>
+        </div>
        
        
         <script type="text/javascript" src="/ui/main.js">
