--- a/ui/index.html
+++ b/ui/index.html
@@ -7,11 +7,11 @@
     <body>
         <div>
             <nav>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Blog</a>
-                <a href="">Gallery</a>
-                <a href="">Contact</a>
+                <a href="/home">Home</a>
+                <a href="/about">About</a>
+                <a href="/blog">Blog</a>
+                <a href="/gallery">Gallery</a>
+                <a href="/contact">Contact</a>
             </nav>
         </div>
        
