--- a/ui/gallery.html
+++ b/ui/gallery.html
@@ -1,1 +1,22 @@
-
+<!doctype html>
+<html>
+    <head>
+        <link href="/ui/style.css" rel="stylesheet" />
+        <title>Tharun Patteti</title>
+    </head>
+    <body>
+        <div>
+            <nav>
+                <a href="/home">Home</a>
+                <a href="/about">About</a>
+                <a href="/blog">Blog</a>
+                <a href="/gallery">Gallery</a>
+                <a href="/contact">Contact</a>
+            </nav>
+        </div>
+       
+       
+        <script type="text/javascript" src="/ui/main.js">
+        </script>
+    </body>
+</html>
