[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <title>Tharun Patteti</title>
-        <link rel="icon" type="image.jpg" href="http://demandware.edgesuite.net/aaox_prd/on/demandware.static/-/Sites-catalog-master/default/dw997cb46d/hi-res/ushi-res/modern-neon-letter-T-a-jonathan-adler.jpg">
+        <link rel="icon" type="image.png" href="https://image.freepik.com/free-icon/tumblr-letter-logo-outline-in-a-rounded-square_318-56040.png">
     </head>
     <body>
         <div>
