[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
               <p><b>Occupation : </b>Student</p>
               <p><b>College : </b>IIT Madras</p>
               <p><b>Home Town : </b>Hyderabad</p>
-              <p><b>Current City : </b>Chennai/p>
+              <p><b>Current City : </b>Chennai</p>
             </div>
         </div>
        
