--- a/ui/home.html
+++ b/ui/home.html
@@ -3,6 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <title>Tharun Patteti</title>
+        <link rel="icon" type="image.png" href="https://image.freepik.com/free-icon/tumblr-letter-logo-outline-in-a-rounded-square_318-56040.png">
     </head>
     <body>
         <div>
