[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="main-body">
             <div class="profilepic">
-                <a href="/home"><img src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-9/13680743_877977462336226_8270549817919574545_n.jpg" alt="Tharun Profile Pic" title="profile pic" ></a>
+                <a href="/home"><img src="https://instagram.fbom1-2.fna.fbcdn.net/t51.2885-19/s150x150/13707158_857126954387183_2108108869_a.jpg" alt="Tharun Profile Pic" title="profile pic" ></a>
             </div>
             <div class="profile-data">
               <p><b>Name : </b>Patteti Tharun</p>
