--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,15 @@
         <link rel="icon" type="image.png" href="https://image.freepik.com/free-icon/tumblr-letter-logo-outline-in-a-rounded-square_318-56040.png">
     </head>
     <body>
+        <div>
+            <nav>
+                <a href="/home">Home</a>
+                <a href="/about">About</a>
+                <a href="/blog">Blog</a>
+                <a href="/gallery">Gallery</a>
+                <a href="/contact">Contact</a>
+            </nav>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
