[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,19 @@
                 <a href="/contact">Contact</a>
             </nav>
         </div>
+        <div class="main-body">
+            <div class="profilepic">
+                <a href="/home"><img src="https://instagram.fbom1-2.fna.fbcdn.net/t51.2885-19/s150x150/15034704_1456858431008368_2439036576492158976_a.jpg" alt="Tharun Profile Pic" title="profile pic" ></a>
+            </div>
+            <div class="profile-data">
+              <p><b>Name : </b>Patteti Tharun</p>
+              <p><b>Occupation : </b>Student</p>
+              <p><b>College : </b>IIT Madras</p>
+              <p><b>Home Town : </b>Hyderabad</p>
+              <p><b>Current City : </b>Chennai</p>
+            </div>
+        </div>
+       
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
