--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div>
+            <a href="/"><img src="https://lh3.googleusercontent.com/8RF5a5DN6izbOfGMdAimhOUt_hQpmDzUCfAPRufi4Iww5xXqZC7e_h7sb3_bbkPhYnuyXg=s170" alt="profileName"></a>
             <nav>
                 <a href="/home">Home</a>
                 <a href="/about">About</a>
