[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <div>
+            <div class="navImage">
                 <a href="/"><img src="https://lh3.googleusercontent.com/8RF5a5DN6izbOfGMdAimhOUt_hQpmDzUCfAPRufi4Iww5xXqZC7e_h7sb3_bbkPhYnuyXg=s170" alt="profileName"></a>
             </div>
             <div>
