[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,19 +7,14 @@
     </head>
     <body>
         <div>
-            <div class="navImage">
+            <nav class="top-bar">
                 <a href="/"><img src="https://lh3.googleusercontent.com/8RF5a5DN6izbOfGMdAimhOUt_hQpmDzUCfAPRufi4Iww5xXqZC7e_h7sb3_bbkPhYnuyXg=s170" alt="profileName"></a>
-            </div>
-            <div>
-                <nav>
-                    <a href="/home">Home</a>
-                    <a href="/about">About</a>
-                    <a href="/blog">Blog</a>
-                    <a href="/gallery">Gallery</a>
-                    <a href="/contact">Contact</a>
-                </nav>
-            </div>
-            
+                <a href="/home">Home</a>
+                <a href="/about">About</a>
+                <a href="/blog">Blog</a>
+                <a href="/gallery">Gallery</a>
+                <a href="/contact">Contact</a>
+            </nav>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
