--- a/ui/contact.html
+++ b/ui/contact.html
@@ -10,7 +10,7 @@
             <nav>
                 <a href="/home">Home</a>
                 <a href="/about">About</a>
-                <a href="/blog">Blog</a>
+                <a href="/blog">My travel Blog</a>
                 <a href="/gallery">Gallery</a>
                 <a href="/contact">Contact</a>
             </nav>
