--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,12 @@
                 <a href="/gallery">Gallery</a>
                 <a href="/contact">Contact</a>
             </nav>
+            <nav class="socialMedia">
+                <a src="tharun94.imad.hasura-app.io"><img src="https://cdn1.iconfinder.com/data/icons/brand-vol-2/78/35-128.png" alt="facebook"></a>
+                <a src="tharun94.imad.hasura-app.io"><img src="https://cdn1.iconfinder.com/data/icons/brand-vol-2/78/3-128.png" alt="Youtube"></a>
+                <a src="tharun94.imad.hasura-app.io"><img src="https://cdn1.iconfinder.com/data/icons/brand-vol-2/78/10-128.png" alt="twitter"></a>
+                <a src="tharun94.imad.hasura-app.io"><img src="https://cdn1.iconfinder.com/data/icons/brand-vol-2/78/43-128.png" alt="instagram"></a>
+            </nav>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
